/
P/oject name: UKM-unified

26/02/2017

 * misc: add various versions of powersuspend (Slawek) [9ccb750]
  * refresh: reduce refresh rate (Slawek) [cd6f73c]
  * live: remove doubled gpu rfequency (Slawek) [7c7bc15]
  * gpu: add more frequency scaling paths and merge kryo (Slawek) [e1b4106]
  * actions: add missing adreno idler (Slawek) [f29df9b]
  * gamma: add kcal on/off toggle (Slawek) [902f70c]
  * info remove speedbin (Slawek) [67603ee]
  * misc: rmove leds control (Slawek) [03ea904]
  * cpufreq: corect paths for cpu frequencies (Slawek) [e499160]

19/02/2017

  * device: fix cpu temp status and remove Farenheits - we going to use Imperial only (Slawek) [b644623]
  * restorebackup: use gamma values from ak kernel (Slawek) [0faa6e7]



18/02/2017

  * small update (Slawek) [15414fa]
  * hotplug: alucard: list frequencies from cpu0 (Slawek) [17514bf]
  * gamma: fix backlight dimmer (Slawek) [5ef2722]
  * advanced: remove spacer (Slawek) [981de6c]
  * gamma: add variable for emulated sd cards (Slawek) [ecdf513]
  * kryo.io: add kryo action for io (Slawek) [9fde354]
  * kryo I/O: correct paths for i/o sheduler (Slawek) [020c208]
  * kryo2: correct toggle paths (Slawek) [dd273ff]
  * kryo1: correct toggle paths (Slawek) [edb9390]
  * cpu2: correct paths for tunables (Slawek) [98d26ac]
  * cpu1: correct paths for tunables (Slawek) [4bb57a1]
  * boost: universal cpu freq list (Slawek) [f0c227e]
  * sound: add flars sound controls for WDC9335 (Slawek) [f3f9bfb]
  * misc: add charge levels , remove version string from powersuspend, move fsync (Slawek) [eb3a0b5]
  * mem: Dirty Expire and writeback Centisecs (Slawek) [98adb7b]
  * I/O: add kryo variable (Slawek) [14baaa6]
  * hotplug: organise and add support for hima and thunderplug (Slawek) [ec1113f]
  * gpu: add finish quote and fix gpuset for kryo (Slawek) [c46e057]
  * i am retarded (Slawek) [527a7a3]
  * gpu: add gpuboost action, adreno530 gpu tunables and adreno boost (Slawek) [52be22f]