@@ -1,0 +1,126 @@
+UKM=/data/UKM;
+BB=$UKM/busybox;
+DEVICE=`sh $UKM/device/.device.sh`;
+BASE_HP_PA_GAIN=`sh $DEVICE HeadphonePAValue`;
+
+LG_Stock() {
+CAM_MIC_GAIN="0 255";
+HEADPHONE_GAIN="0 0 255";
+
+X=$((BASE_HP_PA_GAIN - 0));
+Y=$((255 - X - X));
+HEADPHONE_PA_GAIN="$X $X $Y";
+
+MIC_GAIN="0 255";
+SPEAKER_GAIN="0 0 255";
+}
+
+Quality() {
+CAM_MIC_GAIN="0 255";
+HEADPHONE_GAIN="254 254 259";
+
+X=$((BASE_HP_PA_GAIN - 5));
+Y=$((255 - X - X));
+HEADPHONE_PA_GAIN="$X $X $Y";
+
+MIC_GAIN="0 255";
+SPEAKER_GAIN="254 254 259";
+}
+
+Loudness() {
+CAM_MIC_GAIN="0 255";
+HEADPHONE_GAIN="9 9 237";
+
+X=$((BASE_HP_PA_GAIN - 3));
+Y=$((255 - X - X));
+HEADPHONE_PA_GAIN="$X $X $Y";
+
+MIC_GAIN="0 255";
+SPEAKER_GAIN="5 5 245";
+}
+
+Quiet() {
+CAM_MIC_GAIN="0 255";
+HEADPHONE_GAIN="251 251 265";
+
+X=$((BASE_HP_PA_GAIN + 2));
+Y=$((255 - X - X));
+HEADPHONE_PA_GAIN="$X $X $Y";
+
+MIC_GAIN="0 255";
+SPEAKER_GAIN="253 253 261";
+}
+
+if [ -f $1 ]; then
+	if [[ ! -z $2 ]]; then
+		[ "`sh $DEVICE HasHeadphonePowerAmp`" == "1" ];
+		
+		if [ "$1" == "$UKM/files/sound_prof" ]; then
+			$BB echo $2 > $1;
+		
+			if [ $2 != "Custom" ]; then
+				$2;
+				$BB echo "$CAM_MIC_GAIN" > /sys/kernel/sound_control/cam_mic_gain;
+				$BB echo "$HEADPHONE_GAIN" > /sys/kernel/sound_control/headphone_gain;
+				[ "`sh $DEVICE HasHeadphonePowerAmp`" == "1" ] && $BB echo "$HEADPHONE_PA_GAIN" > /sys/kernel/sound_control/headphone_pa_gain;
+				$BB echo "$MIC_GAIN" > /sys/kernel/sound_control/mic_gain;
+				$BB echo "$SPEAKER_GAIN" > /sys/kernel/sound_control/speaker_gain;
+			fi;
+		
+		elif [ "$1" == "/sys/kernel/sound_control/cam_mic_gain" ] || [ "$1" == "/sys/kernel/sound_control/mic_gain" ]; then
+			if [ "$2" -lt 0 ]; then
+				V=$2;
+				V=$((256 + V));
+				H=$((255 - V));
+			
+				$BB echo "$V $H" > $1;
+			else
+				V=$2;
+				H=$((255 - V));
+				
+				$BB echo "$V $H" > $1;
+			fi;
+		
+		elif [ "$1" == "/sys/kernel/sound_control/headphone_gain" ] || [ "$1" == "/sys/kernel/sound_control/speaker_gain" ]; then
+			if [ "$2" -lt 0 ]; then
+				V=$2;
+				H=$((255 - V - V));
+				V=$((256 + V));
+				
+				$BB echo "$V $V $H" > $1;
+			else
+				V=$2;
+				H=$((255 - V - V));
+				
+				$BB echo "$V $V $H" > $1;
+			fi;
+			
+		else
+			V=$2;
+			V=$((BASE_HP_PA_GAIN - V));
+			H=$((255 - V - V));
+			
+			$BB echo "$V $V $H" > $1;
+		fi;
+		#[ "`sh $DEVICE HasHeadphonePowerAmp`" == "1" ];
+	fi;
+	
+	PATH=$1;
+	C=`while read V1 V2; do echo $V1; done < $PATH`;
+
+	if [ "$PATH" == "/sys/kernel/sound_control/headphone_pa_gain" ]; then
+		C=$((BASE_HP_PA_GAIN - C));
+			
+		$BB echo $C;
+	else
+		if [ "$C" -gt 200 ]; then
+			C=$((C - 256));
+			
+			$BB echo $C;
+		else
+			$BB echo $C;
+		fi;
+	fi;
+fi;
+
+
