@@ -52,7 +52,7 @@ cat << CTAG
 				. $UKM/config.json.generate.gamma
 			$BB echo ','
 			fi
-			if [ -d "/sys/kernel/sound_control_3" -o -d "/sys/class/misc/soundcontrol" ]; then
+			if [ -d "/sys/kernel/sound_control_3" -o -d "/sys/class/misc/soundcontrol" -o -d "/sys/kernel/sound_control" ]; then
 				. $UKM/config.json.generate.sound
 			$BB echo ','
 			fi
