@@ -1,7 +1,7 @@
 id=ukm
 name=Universal Kernel Manager
-version=unified-004
-versionCode=004
+version=unified-005
+versionCode=005
 author=yarpiin
 description=UNIFIED version of UKM by yarpiin, which should work on any device from the box, Magisk module by laggardkernel
 support=https://forum.xda-developers.com/android/software/zip-ukm-reborn-unified-t3558888
